package com.itmo.mrdvd.device.input;

import com.itmo.mrdvd.device.OutputDevice;

public interface InteractiveInputDevice extends InputDevice, OutputDevice {}
