package com.itmo.mrdvd.device.input;

public interface DataInputDevice
    extends LongInputDevice, FloatInputDevice, IntEnumInputDevice {}
