package com.itmo.mrdvd.device;

public enum IOStatus {
  FAILURE,
  SUCCESS
}
